# silly-game-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
silly-game-engine-macros/: Cargo.toml
silly-game-engine-macros/src/: lib.rs
src/: bin.rs  lib.rs  utils.rs
src/assets/: asset_manager.rs  basic_models.rs  mod.rs
src/engine/: component.rs  entity.rs  event.rs  messages.rs  mod.rs  object.rs
src/engine/context/: mod.rs  transform.rs
src/engine/systems/: mod.rs  transform.rs
src/physics/: commands.rs  mod.rs  rapier_engine.rs
src/rendering/: mod.rs  three_d_renderer.rs
src/windowing/: app.rs  mod.rs  windower.rs
